fix: scroll stopped on mobile & use desktop message shown

--- a/styles/css/__intro.scss
+++ b/styles/css/__intro.scss
@@ -62,7 +62,7 @@
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 3.5rem;
       color: white;
       position: absolute;
       bottom: 125px;
